# foxtrotcommunications-forge-core

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  run_avalon_rebuild.py  test_local.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: complexity_analysis.md  forge_vs_manual.md  forge_vs_raw_querying.md  formal_proof.md
src/forge_core/: __init__.py  cli.py  core.py  json_schema.py  profiles.py  schema_writer.py
src/forge_core/adapters/: __init__.py  base.py  bigquery.py  databricks.py  postgres.py  redshift.py  snowflake.py
src/forge_core/adapters/templates/bigquery/: check_source.sql  create_root.sql  create_root_aggregate.sql  create_root_string.sql  create_table.sql  create_table_array.sql  get_keys.sql  get_keys_array.sql  get_rows_processed.sql  get_types.sql  get_types_array.sql
src/forge_core/adapters/templates/databricks/: create_root.sql  create_root_aggregate.sql  create_table.sql  create_table_array.sql  get_keys.sql  get_rows_processed.sql
src/forge_core/adapters/templates/postgres/: create_root_aggregate.sql  create_table_array.sql  get_keys_array.sql  get_rows_processed.sql  get_types_array.sql
src/forge_core/adapters/templates/redshift/: create_root_aggregate.sql
src/forge_core/adapters/templates/snowflake/: create_root_aggregate.sql  create_table_array.sql  get_keys_array.sql  get_types_array.sql
src/forge_core/engine/: __init__.py  build_context.py  context.py  dbt_runner.py  discovery.py  model_generator.py  root_processor.py  schema.py  unnesting.py
tests/: test_adapters.py  test_artifacts.py  test_build_context.py  test_postgres.py  test_profiles.py  test_schema.py
